package BridgePattern;

public interface DataSource {
    public void getData();
}
